syntax = "proto3";

package api;

import "beer.proto";

option go_package = ".";

message GetBeerRequest {
  int64 beerId = 1;
}

message GetBeerResponse {
  optional Beer beer = 1;
}